I updated docker file and database schema